--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,33 +37,33 @@ jobs:
             - start-integration-test.sh
   integration-test:
     docker:
-    - image: cypress/base:10
+      - image: cypress/base:10
     parallelism: 1
     steps:
       - attach_workspace:
           at: .
-    - restore_cache:
-        keys:
-        - cypress-v1-{{ .Branch }}-{{ checksum "package.json" }}
-    - run: cd orko-end-to-end-testing && npm ci
-    - run: ./start-integration-test.sh &
-    - run: cd orko-end-to-end-testing && wait-on http://localhost:8080
-    - run: cd orko-end-to-end-testing && npx cypress verify
-    - save_cache:
-        key: cypress-v1-{{ .Branch }}-{{ checksum "package.json" }}
-        paths:
-        - ~/.npm
-        - ~/.cache
-    - persist_to_workspace:
-        root: ~/
-        paths:
-        - project
-        - .cache/Cypress
-    - attach_workspace:
-        at: ~/
-    - run:
-        name: Run Cypress tests
-        command: 'cd orko-end-to-end-testing && npx cypress run'
+      - restore_cache:
+          keys:
+            - cypress-v1-{{ .Branch }}-{{ checksum "package.json" }}
+      - run: cd orko-end-to-end-testing && npm ci
+      - run: ./start-integration-test.sh &
+      - run: cd orko-end-to-end-testing && wait-on http://localhost:8080
+      - run: cd orko-end-to-end-testing && npx cypress verify
+      - save_cache:
+          key: cypress-v1-{{ .Branch }}-{{ checksum "package.json" }}
+          paths:
+            - ~/.npm
+            - ~/.cache
+      - persist_to_workspace:
+          root: ~/
+          paths:
+            - project
+            - .cache/Cypress
+      - attach_workspace:
+          at: ~/
+      - run:
+          name: Run Cypress tests
+          command: "cd orko-end-to-end-testing && npx cypress run"
 workflows:
   version: 2
   all:
