--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,10 +15,13 @@ jobs:
             - maven-repo-v2-
       - restore_cache:
           keys:
-            - node-v2-{{ .Branch }}-{{ checksum "orko-ui/package-lock.json" }}
-            - node-v2-{{ .Branch }}-
-            - node-v2-
-      - run: mvn -Pproduction clean install -DskipTests=true
+            - node-v3-{{ .Branch }}-{{ checksum "orko-ui/package-lock.json" }}
+            - node-v3-{{ .Branch }}-
+            - node-v3-
+      - restore_cache:
+          keys:
+            - cypress-v1-{{ .Branch }}-{{ checksum "orko-end-to-end-testing/package.json" }}
+      - run: mvn -Pintegration-test clean install integration-test -DskipTests=true
       - save_cache:
           paths:
             - ~/.m2
@@ -27,19 +30,13 @@ jobs:
           paths:
             - /usr/local/lib/node_modules
             - orko-ui/node_modules
-          key: node-v2-{{ .Branch }}-{{ checksum "orko-ui/package-lock.json" }}
-      - restore_cache:
-          keys:
-            - cypress-v1-{{ .Branch }}-{{ checksum "orko-end-to-end-testing/package.json" }}
-      - run: java -cp orko-all-in-one/target/classes:orko-all-in-one/target/dependency/* com.grahamcrockford.orko.allinone.AllInOneApplication server ./orko-all-in-one/integration-test-config.yml &
-      - run: cd orko-end-to-end-testing && npm ci
-      - run: cd orko-end-to-end-testing && npx cypress verify
+            - orko-ui/node
+          key: node-v3-{{ .Branch }}-{{ checksum "orko-ui/package-lock.json" }}
       - save_cache:
           key: cypress-v1-{{ .Branch }}-{{ checksum "orko-end-to-end-testing/package.json" }}
           paths:
             - ~/.npm
             - ~/.cache
-      - run: cd orko-end-to-end-testing && npx cypress run
 workflows:
   version: 2
   all:
