--- a/pom.xml
+++ b/pom.xml
@@ -485,7 +485,7 @@
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>  </artifactId>
+          <artifactId>maven-checkstyle-plugin</artifactId>
           <version>${maven-checkstyle-plugin.version}</version>
           <dependencies>
             <dependency>
