--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
       - restore_cache:
           keys:
             - cypress-v1-{{ .Branch }}-{{ checksum "orko-end-to-end-testing/package.json" }}
-      - run: mvn -Pintegration-test clean install integration-test -DskipTests=true
+      - run: mvn -Pintegration-test clean install -DskipSlowTests=true
       - save_cache:
           paths:
             - ~/.m2
@@ -39,6 +39,24 @@ jobs:
             - orko-end-to-end-testing/node
             - ~/.npm
             - ~/.cache
+      - run:
+          name: Saving checkstyle reports
+          command: |
+            mkdir -p ~/checkstyle/
+            find . -type f -regex ".*/target/checkstyle-result.xml" -exec cp {} ~/checkstyle \;
+          when: always
+      - store_artifacts:
+          path: ~/checkstyle
+      - run:
+          name: Saving test results (H2)
+          command: |
+            mkdir -p ~/junit/h2
+            find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/junit/h2 \;
+          when: always
+      - store_artifacts:
+          path: ~/junit
+      - store_test_results:
+          path: ~/junit
 workflows:
   version: 2
   all:
