Try using browsers image to force Cypress to use Chrome, store videos and screenshots as artifacts

--- a/orko-end-to-end-testing/pom.xml
+++ b/orko-end-to-end-testing/pom.xml
@@ -48,6 +48,8 @@
                 <argument>com.grahamcrockford.orko.allinone.AllInOneApplication</argument>
                 <argument>server</argument>
                 <argument>integration-test-config.yml</argument>
+                <argument>></argument>
+                <argument>app.log</argument>
               </arguments>
             </configuration>
           </execution>
