--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,13 +2,15 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/openjdk:8-jdk
+      - image: circleci/openjdk:8-jdk-browsers
         environment:
           MAVEN_OPTS: -Xmx3200m
     working_directory: ~/orko
     steps:
       - run: sudo apt-get install xvfb libgtk2.0-0 libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2
+
       - checkout
+
       - restore_cache:
           keys:
             - maven-repo-v2-{{ .Branch }}-{{ checksum "pom.xml" }}
@@ -22,7 +24,9 @@ jobs:
       - restore_cache:
           keys:
             - cypress-v1-{{ .Branch }}-{{ checksum "orko-end-to-end-testing/package.json" }}
+
       - run: mvn -Pintegration-test clean install -DskipSlowTests=true -T 1C
+
       - save_cache:
           paths:
             - ~/.m2
@@ -33,13 +37,6 @@ jobs:
             - orko-ui/node_modules
             - orko-ui/node
           key: node-v3-{{ .Branch }}-{{ checksum "orko-ui/package-lock.json" }}
-      - save_cache:
-          key: cypress-v1-{{ .Branch }}-{{ checksum "orko-end-to-end-testing/package.json" }}
-          paths:
-            - orko-end-to-end-testing/node_modules
-            - orko-end-to-end-testing/node
-            - ~/.npm
-            - ~/.cache
       - run:
           name: Saving checkstyle reports
           command: |
@@ -58,6 +55,20 @@ jobs:
           path: ~/junit
       - store_test_results:
           path: ~/junit
+
+      - save_cache:
+          key: cypress-v1-{{ .Branch }}-{{ checksum "orko-end-to-end-testing/package.json" }}
+          paths:
+            - orko-end-to-end-testing/node_modules
+            - orko-end-to-end-testing/node
+            - ~/.npm
+            - ~/.cache
+      - store_artifacts:
+          path: orko-end-to-end-testing/screenshots
+      - store_artifacts:
+          path: orko-end-to-end-testing/app.log
+      - store_artifacts:
+          path: orko-end-to-end-testing/videos
 workflows:
   version: 2
   all:
