--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/openjdk:8-jdk-browsers
+      - image: circleci/openjdk:8-jdk-node-browsers-legacy
         environment:
           MAVEN_OPTS: -Xmx3200m
     working_directory: ~/orko
@@ -23,7 +23,7 @@ jobs:
             - node-v3-
       - restore_cache:
           keys:
-            - cypress-v1-{{ .Branch }}-{{ checksum "orko-end-to-end-testing/package.json" }}
+            - cypress-v2-{{ .Branch }}-{{ checksum "orko-end-to-end-testing/package.json" }}
 
       - run: mvn -Pintegration-test clean install -DskipSlowTests=true -T 1C
 
@@ -57,18 +57,15 @@ jobs:
           path: ~/junit
 
       - save_cache:
-          key: cypress-v1-{{ .Branch }}-{{ checksum "orko-end-to-end-testing/package.json" }}
+          key: cypress-v2-{{ .Branch }}-{{ checksum "orko-end-to-end-testing/package.json" }}
           paths:
             - orko-end-to-end-testing/node_modules
-            - orko-end-to-end-testing/node
             - ~/.npm
             - ~/.cache
       - store_artifacts:
-          path: orko-end-to-end-testing/screenshots
+          path: orko-end-to-end-testing/cypress/screenshots
       - store_artifacts:
-          path: orko-end-to-end-testing/app.log
-      - store_artifacts:
-          path: orko-end-to-end-testing/videos
+          path: orko-end-to-end-testing/target/app.log
 workflows:
   version: 2
   all:
