Clean up modals in the hope that makes the tests pass

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,5 @@
 /orko-end-to-end-testing/cypress/**/*.mp4
 /orko-end-to-end-testing/target
 /orko-end-to-end-testing/node
+/orko-end-to-end-testing/app.log
+/orko-end-to-end-testing/cypress/screenshots/**/*
