--- a/orko-end-to-end-testing/pom.xml
+++ b/orko-end-to-end-testing/pom.xml
@@ -28,7 +28,7 @@
       <plugin>
         <groupId>com.bazaarvoice.maven.plugins</groupId>
         <artifactId>process-exec-maven-plugin</artifactId>
-        <version>0.7</version>
+        <version>${process.exec.maven.plugin.version}</version>
         <executions>
           <execution>
             <id>application</id>
