--- a/pom.xml
+++ b/pom.xml
@@ -225,6 +225,7 @@
     <license.maven.plugin.version>1.16</license.maven.plugin.version>
     <findbugs-maven-plugin.version>3.0.4</findbugs-maven-plugin.version>
     <maven-checkstyle-plugin.version>2.17</maven-checkstyle-plugin.version>
+    <process.exec.maven.plugin.version>0.7</process.exec.maven.plugin.version>
     <checkstyle.version>8.12</checkstyle.version>
     <jacoco.version>0.8.1</jacoco.version>
     <mockito.version>1.10.19</mockito.version>
