--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,14 @@ jobs:
             - orko-ui/node_modules
             - orko-ui/node
           key: node-v3-{{ .Branch }}-{{ checksum "orko-ui/package-lock.json" }}
+      - save_cache:
+          key: cypress-v2-{{ .Branch }}-{{ checksum "orko-end-to-end-testing/package.json" }}
+          paths:
+            - orko-end-to-end-testing/node_modules
+            - orko-end-to-end-testing/node
+            - ~/.npm
+            - ~/.cache
+
       - run:
           name: Saving checkstyle reports
           command: |
@@ -45,29 +53,34 @@ jobs:
           when: always
       - store_artifacts:
           path: ~/checkstyle
+
       - run:
           name: Saving test results (H2)
           command: |
             mkdir -p ~/junit/h2
             find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/junit/h2 \;
           when: always
+
       - run:
           name: Saving test results (Integration)
           command: |
             mkdir -p ~/junit/integration
             find . -type f -regex ".*/target/mocha-reports/.*xml" -exec cp {} ~/junit/integration \;
           when: always
+
+      - run: mvn -Pwebdev surefire:test -DskipSlowTests=true -Dtestdb.url=mysql://open:sesame@127.0.0.1/test
+
+      - run:
+          name: Saving test results (MySQL)
+          command: |
+            mkdir -p ~/junit/mysql
+            find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/junit/mysql \;
+          when: always
+
       - store_artifacts:
           path: ~/junit
       - store_test_results:
           path: ~/junit
-
-      - save_cache:
-          key: cypress-v2-{{ .Branch }}-{{ checksum "orko-end-to-end-testing/package.json" }}
-          paths:
-            - orko-end-to-end-testing/node_modules
-            - ~/.npm
-            - ~/.cache
       - store_artifacts:
           path: orko-end-to-end-testing/cypress/screenshots
       - store_artifacts:
