--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@
 /orko-end-to-end-testing/node
 /orko-end-to-end-testing/app.log
 /orko-end-to-end-testing/cypress/screenshots/**/*
+/orko-all-in-one/dependency-reduced-pom.xml
