--- a/pom.xml
+++ b/pom.xml
@@ -214,6 +214,7 @@
     <jose4j.version>0.6.4</jose4j.version>
     <dropwizard-websockets-version>1.3.2</dropwizard-websockets-version>
     <urlrewritefilter.version>4.0.4</urlrewritefilter.version>
+    <dropwizard.https.redirect.version>0.0.3-SNAPSHOT</dropwizard.https.redirect.version>
 
     <maven.jar.plugin.version>3.0.2</maven.jar.plugin.version>
     <maven.compiler.plugin.version>3.7.0</maven.compiler.plugin.version>
@@ -240,6 +241,11 @@
         <version>${dropwizard.version}</version>
         <type>pom</type>
         <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>com.gruelbox</groupId>
+        <artifactId>dropwizard-https-redirect</artifactId>
+        <version>${dropwizard.https.redirect.version}</version>
       </dependency>
       <dependency>
         <groupId>org.tuckey</groupId>
