--- a/pom.xml
+++ b/pom.xml
@@ -239,6 +239,7 @@
     <dropwizard-websockets-version>1.3.2</dropwizard-websockets-version>
     <urlrewritefilter.version>4.0.4</urlrewritefilter.version>
     <dropwizard.https.redirect.version>0.0.3</dropwizard.https.redirect.version>
+    <dropwizard.guice.box.version>0.0.1-SNAPSHOT</dropwizard.guice.box.version>
 
     <maven.jar.plugin.version>3.0.2</maven.jar.plugin.version>
     <maven.compiler.plugin.version>3.7.0</maven.compiler.plugin.version>
@@ -270,6 +271,11 @@
         <groupId>com.gruelbox</groupId>
         <artifactId>dropwizard-https-redirect</artifactId>
         <version>${dropwizard.https.redirect.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.gruelbox</groupId>
+        <artifactId>dropwizard-guice-box</artifactId>
+        <version>${dropwizard.guice.box.version}</version>
       </dependency>
       <dependency>
         <groupId>org.tuckey</groupId>
