--- a/pom.xml
+++ b/pom.xml
@@ -249,7 +249,7 @@
     <dropwizard-websockets-version>1.3.2</dropwizard-websockets-version>
     <urlrewritefilter.version>4.0.4</urlrewritefilter.version>
     <dropwizard.https.redirect.version>0.0.3</dropwizard.https.redirect.version>
-    <dropwizard.guice.box.version>0.0.1-SNAPSHOT</dropwizard.guice.box.version>
+    <dropwizard.guice.box.version>0.0.1</dropwizard.guice.box.version>
 
     <maven.jar.plugin.version>3.0.2</maven.jar.plugin.version>
     <maven.compiler.plugin.version>3.7.0</maven.compiler.plugin.version>
