Use Hibernate for actual database layer, just because Dropwizard provides a turnkey connection pooling and transaction scoping solution that I may as well use. May actually using it for ORM. Not decided yet. In the meantime, trying it out with IP whitelisting

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,7 +84,7 @@ jobs:
               sleep 1
             done
             echo Failed waiting for MySQL && exit 1
-      - run: mvn -Pwebdev surefire:test -DskipSlowTests=true -Dtestdb.url=mysql://open:sesame@127.0.0.1/test
+      - run: mvn -Pwebdev surefire:test -Dmorf.mysql.noadmin=true -DskipSlowTests=true -Dtestdb.url=mysql://open:sesame@127.0.0.1/test
 
       - run:
           name: Saving test results (MySQL)
