--- a/.gitignore
+++ b/.gitignore
@@ -19,16 +19,14 @@
 /orko-web/dependency-reduced-pom.xml
 /orko-worker/dependency-reduced-pom.xml
 /target/orko-parent-0.0.1-SNAPSHOT-shaded.pom
-/orko-all-in-one/my-config.yml
+/orko-app/my-config.yml
 /target/
 /orko-common/.settings/org.jboss.tools.maven.apt.prefs
 /orko-ui/.settings
 /orko-ui/node
-/orko-all-in-one/src/main/resources/assets
-/orko-all-in-one/orko.mv.db
-/orko-all-in-one/orko.trace.db
-/orko.mv.db
-/orko.trace.db
+/orko-app/src/main/resources/assets
+/**/orko.mv.db
+/**/orko.trace.db
 /orko-end-to-end-testing/cypress/**/*.mp4
 /orko-end-to-end-testing/target
 /orko-end-to-end-testing/node
