--- a/orko-db-testsupport/pom.xml
+++ b/orko-db-testsupport/pom.xml
@@ -18,22 +18,39 @@
   <name>Orko DB Testsupport</name>
 
   <dependencies>
-  
+
     <dependency>
       <groupId>com.gruelbox</groupId>
       <artifactId>orko-base</artifactId>
       <version>${project.version}</version>
     </dependency>
-    
+
     <dependency>
       <groupId>${morf.groupid}</groupId>
       <artifactId>morf-testsupport</artifactId>
       <version>${morf.version}</version>
     </dependency>
-    
+
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>io.dropwizard</groupId>
+      <artifactId>dropwizard-testing</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.hamcrest</groupId>
+      <artifactId>hamcrest-core</artifactId>
+      <scope>compile</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <scope>compile</scope>
     </dependency>
 
   </dependencies>
