Create jobs with known ids, thus making their submission idempotent

--- a/orko-ui/package.json
+++ b/orko-ui/package.json
@@ -30,7 +30,8 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.83.0",
     "styled-components": "^4.1.1",
-    "styled-system": "^3.1.11"
+    "styled-system": "^3.1.11",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
