--- a/orko-app/integration-test-config.yml
+++ b/orko-app/integration-test-config.yml
@@ -7,7 +7,8 @@ auth:
     secretKey: KJY4B3ZOFWRNNCN4
   jwt:
     userName: ci
-    password: tester
+    password: HASH(VyMnzLKdBkOYyYfJqFPzqt/OcKG1+xHtyaObQcmi3bo=)
+    passwordSalt: mxnuUXa/SkNmQ+rQ3Qpk3Q==
     secret: 234q9803b21KJHSAD)9832yhSdSUH9222fg234gefdsa11
     secondFactorSecret: O546XLKJMJIQM3PW
     expirationMinutes: 1440
