--- a/app.json
+++ b/app.json
@@ -38,7 +38,7 @@
     },
     "MAVEN_CUSTOM_OPTS": {
       "description": "Used by the Heroku buildpack. Do not change.",
-      "value": "-Pproduction --update-snapshots -DskipTests=true -T 1C"
+      "value": "-Pproduction -DskipTests=true -T 1C"
     },
     "TELEGRAM_BOT_TOKEN": {
       "description": "The Telegram bot API token. Can be omitted, in which case Telegram notifications won't be used.",
