--- a/pom.xml
+++ b/pom.xml
@@ -175,11 +175,11 @@
 
     <dropwizard.version>1.3.7</dropwizard.version>
 
-    <xchange.version>4.3.11</xchange.version>
+    <xchange.version>4.3.13</xchange.version>
 
     <!--<xchange.stream.groupid>info.bitrich.xchange-stream</xchange.stream.groupid> -->
     <xchange.stream.groupid>com.github.badgerwithagun.xchange-stream</xchange.stream.groupid>
-    <xchange.stream.version>4.3.11.orko.4</xchange.stream.version>
+    <xchange.stream.version>4.3.11.orko.5</xchange.stream.version>
 
     <streamex.version>0.6.7</streamex.version>
     <guice.version>4.2.2</guice.version>
@@ -400,7 +400,7 @@
       </dependency>
       <dependency>
         <groupId>org.knowm.xchange</groupId>
-        <artifactId>xchange-gdax</artifactId>
+        <artifactId>xchange-coinbasepro</artifactId>
         <version>${xchange.version}</version>
       </dependency>
       <dependency>
@@ -446,7 +446,7 @@
       </dependency>
       <dependency>
         <groupId>${xchange.stream.groupid}</groupId>
-        <artifactId>xchange-gdax</artifactId>
+        <artifactId>xchange-coinbasepro</artifactId>
         <version>${xchange.stream.version}</version>
       </dependency>
 
