--- a/orko-common/pom.xml
+++ b/orko-common/pom.xml
@@ -11,7 +11,7 @@
   <parent>
     <groupId>com.gruelbox</groupId>
     <artifactId>orko-parent</artifactId>
-    <version>0.5.1-SNAPSHOT</version>
+    <version>0.5.1</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
