--- a/orko-common/pom.xml
+++ b/orko-common/pom.xml
@@ -147,6 +147,10 @@
       <groupId>org.knowm.xchange</groupId>
       <artifactId>xchange-bittrex</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.knowm.xchange</groupId>
+      <artifactId>xchange-bitmex</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>${xchange.stream.groupid}</groupId>
