Add dummy maintenance for scripts, working script task creation

--- a/orko-ui/package.json
+++ b/orko-ui/package.json
@@ -11,6 +11,7 @@
     "http-proxy-middleware": "^0.19.1",
     "immutable": "^3.8.2",
     "polished": "^1.9.3",
+    "prismjs": "^1.15.0",
     "react": "^16.6.3",
     "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.6.3",
@@ -19,6 +20,7 @@
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "react-simple-code-editor": "^0.8.0",
     "react-table": "^6.8.6",
     "recompose": "^0.30.0",
     "reconnecting-websocket": "^4.1.10",
