--- a/orko-db-testsupport/pom.xml
+++ b/orko-db-testsupport/pom.xml
@@ -49,7 +49,7 @@
 
     <dependency>
       <groupId>org.mockito</groupId>
-      <artifactId>mockito-all</artifactId>
+      <artifactId>mockito-core</artifactId>
       <scope>compile</scope>
     </dependency>
 
