--- a/pom.xml
+++ b/pom.xml
@@ -168,8 +168,8 @@
 
   <properties>
     <min.maven.version>3.0.0</min.maven.version>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
@@ -184,7 +184,7 @@
     <streamex.version>0.6.7</streamex.version>
     <guice.version>4.2.2</guice.version>
     <guava.version>27.0-jre</guava.version>
-    <autovalue.version>1.6.2</autovalue.version>
+    <autovalue.version>1.6.3</autovalue.version>
     <rabbitmq.version>5.4.3</rabbitmq.version>
     <j00q.version>3.11.7</j00q.version>
     <mysql.connector.version>8.0.13</mysql.connector.version>
@@ -201,25 +201,34 @@
     <dropwizard.https.redirect.version>0.0.3</dropwizard.https.redirect.version>
     <dropwizard.guice.box.version>0.0.1</dropwizard.guice.box.version>
 
-    <maven.jar.plugin.version>3.0.2</maven.jar.plugin.version>
-    <maven.compiler.plugin.version>3.7.0</maven.compiler.plugin.version>
-    <maven-dependency-plugin-version>3.0.2</maven-dependency-plugin-version>
+    <javassist.version>3.24.1-GA</javassist.version>
+    <asm.version>7.0</asm.version>
+
+    <maven.jar.plugin.version>3.1.1</maven.jar.plugin.version>
+    <maven.compiler.plugin.version>3.8.0</maven.compiler.plugin.version>
+    <maven-dependency-plugin-version>3.1.1</maven-dependency-plugin-version>
     <maven-resources-plugin-version>3.1.0</maven-resources-plugin-version>
     <maven-surefire-plugin-version>2.22.1</maven-surefire-plugin-version>
     <maven.enforcer.plugin.version>1.4.1</maven.enforcer.plugin.version>
     <frontend-maven-plugin-version>1.6</frontend-maven-plugin-version>
     <license.maven.plugin.version>1.16</license.maven.plugin.version>
-    <findbugs-maven-plugin.version>3.0.4</findbugs-maven-plugin.version>
-    <maven-checkstyle-plugin.version>2.17</maven-checkstyle-plugin.version>
+    <findbugs-maven-plugin.version>3.0.5</findbugs-maven-plugin.version>
+    <maven-checkstyle-plugin.version>3.0.0</maven-checkstyle-plugin.version>
     <process.exec.maven.plugin.version>0.7</process.exec.maven.plugin.version>
     <checkstyle.version>8.12</checkstyle.version>
-    <jacoco.version>0.8.1</jacoco.version>
-    <mockito.version>1.10.19</mockito.version>
+    <jacoco.version>0.8.2</jacoco.version>
+    <mockito.version>2.23.4</mockito.version>
     <hamcrest.version>1.3</hamcrest.version>
   </properties>
 
   <dependencyManagement>
     <dependencies>
+
+      <dependency>
+        <groupId>org.javassist</groupId>
+        <artifactId>javassist</artifactId>
+        <version>${javassist.version}</version>
+      </dependency>
       <dependency>
         <groupId>io.dropwizard</groupId>
         <artifactId>dropwizard-bom</artifactId>
@@ -280,7 +289,7 @@
       </dependency>
       <dependency>
         <groupId>org.mockito</groupId>
-        <artifactId>mockito-all</artifactId>
+        <artifactId>mockito-core</artifactId>
         <version>${mockito.version}</version>
         <scope>test</scope>
       </dependency>
@@ -463,6 +472,24 @@
             <source>${maven.compiler.source}</source>
             <target>${maven.compiler.target}</target>
           </configuration>
+          <dependencies>
+            <dependency>
+              <groupId>org.ow2.asm</groupId>
+              <artifactId>asm</artifactId>
+              <version>${asm.version}</version>
+            </dependency>
+          </dependencies>
+        </plugin>
+        <plugin>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>${maven-surefire-plugin-version}</version>
+          <dependencies>
+            <dependency>
+              <groupId>org.ow2.asm</groupId>
+              <artifactId>asm</artifactId>
+              <version>${asm.version}</version>
+            </dependency>
+          </dependencies>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -510,7 +537,7 @@
             </dependency>
           </dependencies>
           <configuration>
-            <sourceDirectory>${project.build.sourceDirectory}</sourceDirectory>
+            <sourceDirectories>${project.build.sourceDirectory}</sourceDirectories>
             <suppressionsLocation>../etc/checkstyle-suppressions.xml</suppressionsLocation>
             <configLocation>../etc/checkstyle.xml</configLocation>
             <encoding>UTF-8</encoding>
