Gitignore versionsBackup files

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@
 /orko-end-to-end-testing/node
 /orko-end-to-end-testing/app.log
 /orko-end-to-end-testing/cypress/screenshots/**/*
+**/*.versionsBackup
