--- a/orko-ui/pom.xml
+++ b/orko-ui/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>com.gruelbox</groupId>
     <artifactId>orko-parent</artifactId>
-    <version>0.8.3-SNAPSHOT</version>
+    <version>0.8.4</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
