--- a/orko-ui/pom.xml
+++ b/orko-ui/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
@@ -17,34 +18,34 @@
   <profiles>
     <profile>
       <id>release</id>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>license-maven-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>generate-license-headers</id>
-                <goals>
-                  <goal>update-file-header</goal>
-                </goals>
-                <phase>process-sources</phase>
-                <configuration>
-                  <includes>
-                    <includes>**/*.js</includes>
-                  </includes>
-                  <roots>
-                    <root>src</root>
-                  </roots>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
+  <build>
+      <plugins>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>license-maven-plugin</artifactId>
+          <executions>
+            <execution>
+              <id>generate-license-headers</id>
+              <goals>
+                <goal>update-file-header</goal>
+              </goals>
+              <phase>process-sources</phase>
+              <configuration>
+                <excludes>
+                  <excludes>src/semantic/**</excludes>
+                </excludes>
+                <roots>
+                  <root>src</root>
+                </roots>
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
+      </plugins>
       </build>
     </profile>
   </profiles>
-
+    
   <build>
     <resources>
       <resource>
