--- a/orko-ui/pom.xml
+++ b/orko-ui/pom.xml
@@ -32,7 +32,7 @@
               <phase>process-sources</phase>
               <configuration>
                 <excludes>
-                  <exclude>src/semantic/**</exclude>
+                  <exclude>/semantic/**</exclude>
                 </excludes>
                 <roots>
                   <root>src</root>
